refactor: migrate restaurant management to persistent database storage with JDBC integration and audit logging