@@ -7,13 +7,20 @@ import java.util.Collections;
 public class Customer extends User {
     private List<String> addresses;
 
+    // Used when creating a new customer (DB will assign ID)
     public Customer(String firstName, String lastName, String phoneNumber, String email) {
         super(firstName, lastName, phoneNumber, email);
         addresses = new ArrayList<>();
     }
 
+    // Used when reconstructing a customer from the DB
+    public Customer(int id, String firstName, String lastName, String phoneNumber, String email) {
+        super(id, firstName, lastName, phoneNumber, email);
+        addresses = new ArrayList<>();
+    }
+
     public void addAddress(String address){
-        if ( address == null || address.isEmpty()) {
+        if (address == null || address.isEmpty()) {
             throw new IllegalArgumentException("Adresa nu poate fi null sau gol!");
         }
         if (addresses.contains(address)) {
@@ -36,21 +43,19 @@ public class Customer extends User {
     public String getPreferredAddress(){
         if(addresses.isEmpty())
             return null;
-        return addresses.getFirst();
+        return addresses.get(0);        // Java 17 compatible (getFirst() is Java 21+)
     }
 
     public void setPreferredAddress(String address){
         if(addresses.contains(address)) {
             addresses.remove(address);
-            addresses.addFirst(address);
-        }
-        else {
+            addresses.add(0, address);  // Java 17 compatible (addFirst() is Java 21+)
+        } else {
             throw new IllegalArgumentException("Adresa nu există în lista clientului!");
         }
     }
 
-    @Override
-    public String getFullName() {
+    public String getFullName(){
         return getFirstName() + " " + getLastName();
     }
 }
